--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   },
   "devDependencies": {
     "browserify": "^16.2.3",
-    "coveralls": "^3.0.2",
+    "coveralls": "^3.0.6",
     "eslint": "^5.9.0",
     "istanbul": "^0.4.5",
-    "markdown-it": "markdown-it/markdown-it",
-    "markdown-it-testgen": "~0.1.0",
+    "markdown-it": "^9.0.1",
+    "markdown-it-testgen": "^0.1.6",
     "mocha": "^5.2.0",
     "terser": "^3.17.0"
   }
